# CG_RayTracing

./: .gitignore  CMakeLists.txt
CG_Raytracing/: CG_Raytracing.cpp  CG_Raytracing.h  CMakeLists.txt  project.ps1
CG_Raytracing/app/: CG_Raytracing.cpp  CMakeLists.txt
CG_Raytracing/common/: CMakeLists.txt
CG_Raytracing/common/include/: Macros.hpp  Utility.hpp  config.hpp
CG_Raytracing/common/src/: Utility.cpp
CG_Raytracing/engine/: CMakeLists.txt
CG_Raytracing/engine/include/: FrameBuffer.hpp  GLContext.hpp  GLError.hpp  GpuBuffer.hpp  IndexBuffer.hpp  SamplerParams.hpp  Shader.hpp  Texture2D.hpp  TextureBase.hpp  TextureFormats.hpp  VertexBuffer.hpp
CG_Raytracing/engine/src/: FrameBuffer.cpp  GLContext.cpp  GpuBuffer.cpp  IndexBuffer.cpp  SamplerParams.cpp  Shader.cpp  Texture2D.cpp  TextureFormats.cpp  VertexBuffer.cpp
CG_Raytracing/src/: CMakeLists.txt
CG_Raytracing/src/geometry/: CMakeLists.txt
CG_Raytracing/src/geometry/include/: cube.hpp  hit_record.hpp  hittable.hpp  kd_tree.hpp  material.hpp  mesh.hpp  obj_loader.hpp  sphere.hpp  triangle.hpp
CG_Raytracing/src/geometry/src/: cube.cpp  hit_record.cpp  hittable.cpp  kd_tree.cpp  material.cpp  mesh.cpp  obj_loader.cpp  sphere.cpp  triangle.cpp
CG_Raytracing/src/math/: CMakeLists.txt
CG_Raytracing/src/math/include/: random_prob.hpp  ray.hpp  vec3.hpp
CG_Raytracing/src/math/src/: random_prob.cpp  ray.cpp  vec3.cpp
CG_Raytracing/src/scene/: CMakeLists.txt
CG_Raytracing/src/scene/include/: PointLight.hpp  camera.hpp  world.hpp
CG_Raytracing/src/scene/src/: camera.cpp  world.cpp
CG_Raytracing/test/: CMakeLists.txt
CG_Raytracing/tests/: CMakeLists.txt
CG_Raytracing/tests/geometry/: test_kd_tree.cpp  test_mesh.cpp  test_obj_loader.cpp
CG_Raytracing/tests/math/: test_Vec3.cpp
assets/: main.frag  main.vert
assets/meshes/: Treno.mtl
